--- a/uniform-data/component/page.yaml
+++ b/uniform-data/component/page.yaml
@@ -82,6 +82,7 @@ slots:
       - interactiveImage
       - collaborationHero
       - colorShowcaseBlock
+      - productListBanner
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -92,4 +93,4 @@ slots:
     inheritAllowedComponents: false
 canBeComposition: true
 created: '2025-11-25T11:16:14.048532+00:00'
-updated: '2025-12-16T20:09:53.922401+00:00'
+updated: '2025-12-16T22:11:15.464297+00:00'
